Move support chat up to ensure footer visibility

--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -75,7 +75,7 @@
 
 #open_support {
   position: fixed;
-  bottom: 20px;
+  bottom: 55px;
   right: 20px;
   z-index: 1;
   border-radius: 20px;
@@ -84,7 +84,7 @@
 #support_ui {
   position: fixed;
   width: 400px;
-  bottom: 20px;
+  bottom: 39px;
   right: 21px;
   z-index: 20;
   border-radius: 20px;
